一問目作った

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
       <h1 class="title">ガチで東京の人しか解けない！#東京の難読地名クイズ</h1> 
       <div class="content">
-          <h2>1.この地名はなんて読む？</h2>
+          <h2 class="question">1.この地名はなんて読む？</h2>
           <img src="imgs/高輪.png" alt="">
           <ul>
               <li class="selections">たかなわ</li>
