一問目の見た目を作りました

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>quizy頑張るよ!</title>
 </head>
@@ -12,8 +13,10 @@
       <h1 class="title">ガチで東京の人しか解けない！#東京の難読地名クイズ</h1> 
       <div class="content">
           <h2 class="question">1.この地名はなんて読む？</h2>
-          <img src="imgs/高輪.png" alt="">
-          <ul>
+          <div class="img">
+              <img src="imgs/高輪.png" alt="">
+          </div>
+          <ul class="aaa">
               <li class="selections">たかなわ</li>
               <li class="selections">たかわ</li>
               <li class="selections">こうわ</li>
