--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
               <img src="imgs/高輪.png" alt="">
           </div>
           <ul class="aaa">
-              <li class="selections">たかなわ</li>
-              <li class="selections">たかわ</li>
-              <li class="selections">こうわ</li>
+              <li class="selections" id="selections1">たかなわ</li>
+              <li class="selections" id="selections2">たかわ</li>
+              <li class="selections" id="selections3">こうわ</li>
           </ul>
       </div>  
   </div>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
 
