先週から変わりなし

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>quizy頑張るよ!</title>
 </head>
-<body>
+<!-- <body>
   <div class="wrapper">
       <h1 class="title">ガチで東京の人しか解けない！#東京の難読地名クイズ</h1> 
       <div class="content">
@@ -23,6 +23,11 @@
           </ul>
       </div>  
   </div>
+  <div class="correctBox" id="correctBox">
+    <b class="correctTitle" id="correctTitle">正解！</b>
+    <b class="uncorrectTitle" id="uncorrectTitle">不正解！</b>
+    <p>正解は「たかなわ」です！</p>
+  </div> -->
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
