選択肢をjsに書きました

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,27 +9,29 @@
     <link rel="stylesheet" href="style.css">
     <title>quizy頑張るよ!</title>
 </head>
-<!-- <body>
-  <div class="wrapper">
-      <h1 class="title">ガチで東京の人しか解けない！#東京の難読地名クイズ</h1> 
-      <div class="content">
-          <h2 class="question">1.この地名はなんて読む？</h2>
-          <div class="img">
-              <img src="imgs/高輪.png" alt="">
-          </div>
-          <ul class="aaa">
-              <li class="selections" id="selections1">たかなわ</li>
-              <li class="selections" id="selections2">たかわ</li>
-              <li class="selections" id="selections3">こうわ</li>
-          </ul>
-      </div>  
-  </div>
-  <div class="correctBox" id="correctBox">
-    <b class="correctTitle" id="correctTitle">正解！</b>
-    <b class="uncorrectTitle" id="uncorrectTitle">不正解！</b>
-    <p>正解は「たかなわ」です！</p>
-  </div> -->
-  <script type="text/javascript" src="app.js"></script>
-</body>
-</html>
 
+<body>
+    <h1 class="title">ガチで東京の人しか解けない！#東京の難読地名クイズ</h1>
+    <!-- <div class="wrapper" id="wrapper"> -->
+        <!-- <h1 class="title">ガチで東京の人しか解けない！#東京の難読地名クイズ</h1>
+        <div class="content">
+            <h2 class="question">1.この地名はなんて読む？</h2>
+            <div class="img">
+                <img src="imgs/高輪.png" alt="">
+            </div>
+            <ul class="aaa">
+                <li class="selections" id="selections1">たかなわ</li>
+                <li class="selections" id="selections2">たかわ</li>
+                <li class="selections" id="selections3">こうわ</li>
+            </ul>
+        </div>
+        <div class="correctBox" id="correctBox">
+            <b class="correctTitle" id="correctTitle">正解！</b>
+            <b class="uncorrectTitle" id="uncorrectTitle">不正解！</b>
+            <p>正解は「たかなわ」です！</p>
+        </div> -->
+    <!-- </div> -->
+    <script type="text/javascript" src="app.js"></script>
+</body>
+
+</html>
